1C-integration. Added styles for this page. But adjustments needed. Development: correctet font-sizes and corrected design whith PixelPerfect

--- a/src/development.html
+++ b/src/development.html
@@ -219,32 +219,34 @@
             </div>
         </div>
 
-
-        <div class="page-cases container">
-            <p class="page-cases-title">Наши кейсы</p>
-            <div class="page-cases-gallery">
-                <img class="cases-gallery-item" src='img/development/Frame%20105.png' alt="frame1"/>
-                <img class="cases-gallery-item" src='img/development/Frame%20107.png' alt="frame1"/>
-                <img class="cases-gallery-item" src='img/development/Frame%20106.png' alt="frame1"/>
-            </div>
-            <div class="page-cases-swiper">
-                <div class="swiper-arrows">
+        <div class="page-cases">
+            <div class="page-cases-container container">
+              <p class="page-cases-title">Наши кейсы</p>
+              <div class="page-cases-gallery">
+                  <img class="cases-gallery-item" src='img/development/Frame%20105.png' alt="frame1"/>
+                  <img class="cases-gallery-item" src='img/development/Frame%20107.png' alt="frame1"/>
+                 <img class="cases-gallery-item" src='img/development/Frame%20106.png' alt="frame1"/>
+              </div>
+              <div class="page-cases-swiper">
+                  <div class="swiper-arrows">
                     <div class="swiper-arrow swiper-arrow-prev">
-                        <!--                  <img src="@img/icons/icons.svg#arrow-slider" alt="arrow" />-->
-                        <svg class="svg-arrow-slider">
-                            <use href="#arrow-left"/>
-                        </svg>
+                    <!--                  <img src="@img/icons/icons.svg#arrow-slider" alt="arrow" />-->
+                     <svg class="svg-arrow-slider">
+                        <use href="#arrow-left"/>
+                     </svg>
                     </div>
                     <div class="swiper-arrow swiper-arrow-next">
-                        <svg class="svg-arrow-slider">
-                            <use href="#arrow-right"/>
-                        </svg>
-                        <!--                  <img src="@img/icons/icons.svg#arrow-slider" alt="arrow" />-->
+                     <svg class="svg-arrow-slider">
+                        <use href="#arrow-right"/>
+                     </svg>
+                    <!--                  <img src="@img/icons/icons.svg#arrow-slider" alt="arrow" />-->
                     </div>
-                </div>
-                <span class="page-look"><a class="page-look-href" href='#'>Смотреть все</a></span>
+                  </div>
+                  <span class="page-look"><a class="page-look-href" href='#'>Смотреть все</a></span>
+              </div>
             </div>
         </div>
+
 
     </section>
 </main>
