--- a/src/html/all-pages/dropdown.html
+++ b/src/html/all-pages/dropdown.html
@@ -9,13 +9,13 @@
     <div class="dropdown-menu">
         <ul class="dropdown-submenu">
             <p class="dropdown-submenu-title">Разработка</p>
-            <a href="./src/development.html">
+            <a href="/development.html">
                 <li class="dropdown-submenu-item">Создание сайтов</li>
             </a>
-            <a href="./src/internet-shops.html">
+            <a href="/internet-shops.html">
                 <li class="dropdown-submenu-item">Разработка интернет-магазинов</li>
             </a>
-            <a href="">
+            <a href="/1C-integration.html">
                 <li class="dropdown-submenu-item">Интеграция с 1С</li>
             </a>
             <a href="">
