Header: added class .header and added background-color in class header

--- a/src/html/all-pages/header.html
+++ b/src/html/all-pages/header.html
@@ -1,37 +1,41 @@
-<header class="container">
-  <a class="header-logo" href="/"><img src="@img/icons/icons.svg#logo" alt="logo"/></a>
-  <ul class="header-menu">
-    <li class="header-menu-item header-menu-item-services">Услуги
-      <img class="header-menu-item-arrow" src="@img/icons/icons.svg#arrow" alt="arrow"/>
-    </li>
-    <li class="header-menu-item">Битрикс</li>
-    <li class="header-menu-item">Кейсы</li>
-    <li class="header-menu-item">О нас</li>
-    <li class="header-menu-item">Блог</li>
-    <li class="header-menu-item">Контакты</li>
-  </ul>
-  <a class="header-phone" href="tel:+79803752254">
-    <img class="header-phone-icon" src="@img/icons/icons.svg#shape" alt="phone" />
-    <span class="header-phone-text"> +7 980 375 22 54 </span>
-    <img class="header-phone-arrow" src="@img/icons/icons.svg#arrow" alt="arrow" />
-  </a>
-<!--  <svg class="svg-burger" width="16" height="12" viewBox="0 0 16 12" fill="none" xmlns="http://www.w3.org/2000/svg">-->
-<!--    <path d="M0 1a1 1 0 0 1 1-1h14a1 1 0 1 1 0 2H1a1 1 0 0 1-1-1zm0 5a1 1 0 0 1 1-1h14a1 1 0 1 1 0 2H1a1 1 0 0 1-1-1zm0 5a1 1 0 0 1 1-1h14a1 1 0 1 1 0 2H1a1 1 0 0 1-1-1z" fill="#474747"/>-->
-<!--  </svg>-->
-<!--  <div class="header-phone">-->
-<!--    <img class="header-phone-icon" src="@img/icons/icons.svg#shape" alt="phone"/>-->
-<!--    <div class="header-phone-wrapper">-->
-<!--      <a href="tel:+79803752254">-->
-<!--        <p class="header-phone-text"> +7 980 375 22 54 </p>-->
-<!--      </a>-->
-<!--      <div class="header-phone-wrapper-hide">-->
-<!--        <a href="tel:+79803752254">-->
-<!--          <p class="header-phone-text"> +7 910 360 63 92 </p>-->
-<!--        </a>-->
-<!--      </div>-->
-<!--    </div>-->
-<!--    <img class="header-phone-arrow" src="@img/icons/icons.svg#arrow" alt="arrow"/>-->
-<!--  </div>-->
+<div class="header">
+  <header class="container">
+    <a class="header-logo" href="/"><img src="@img/icons/icons.svg#logo" alt="logo"/></a>
+    <ul class="header-menu">
+      <li class="header-menu-item header-menu-item-services">Услуги
+        <img class="header-menu-item-arrow" src="@img/icons/icons.svg#arrow" alt="arrow"/>
+      </li>
+      <li class="header-menu-item">Битрикс</li>
+      <li class="header-menu-item">Кейсы</li>
+      <li class="header-menu-item">О нас</li>
+      <li class="header-menu-item">Блог</li>
+      <li class="header-menu-item">Контакты</li>
+    </ul>
+    <a class="header-phone" href="tel:+79803752254">
+      <img class="header-phone-icon" src="@img/icons/icons.svg#shape" alt="phone" />
+      <span class="header-phone-text"> +7 980 375 22 54 </span>
+      <img class="header-phone-arrow" src="@img/icons/icons.svg#arrow" alt="arrow" />
+    </a>
+    <!--  <svg class="svg-burger" width="16" height="12" viewBox="0 0 16 12" fill="none" xmlns="http://www.w3.org/2000/svg">-->
+    <!--    <path d="M0 1a1 1 0 0 1 1-1h14a1 1 0 1 1 0 2H1a1 1 0 0 1-1-1zm0 5a1 1 0 0 1 1-1h14a1 1 0 1 1 0 2H1a1 1 0 0 1-1-1zm0 5a1 1 0 0 1 1-1h14a1 1 0 1 1 0 2H1a1 1 0 0 1-1-1z" fill="#474747"/>-->
+    <!--  </svg>-->
+    <!--  <div class="header-phone">-->
+    <!--    <img class="header-phone-icon" src="@img/icons/icons.svg#shape" alt="phone"/>-->
+    <!--    <div class="header-phone-wrapper">-->
+    <!--      <a href="tel:+79803752254">-->
+    <!--        <p class="header-phone-text"> +7 980 375 22 54 </p>-->
+    <!--      </a>-->
+    <!--      <div class="header-phone-wrapper-hide">-->
+    <!--        <a href="tel:+79803752254">-->
+    <!--          <p class="header-phone-text"> +7 910 360 63 92 </p>-->
+    <!--        </a>-->
+    <!--      </div>-->
+    <!--    </div>-->
+    <!--    <img class="header-phone-arrow" src="@img/icons/icons.svg#arrow" alt="arrow"/>-->
+    <!--  </div>-->
 
-  @@include('dropdown.html',{})
-</header>
+    @@include('dropdown.html',{})
+  </header>
+</div>
+
+
