sixth-screen: corrected position arrows

--- a/src/html/home/sixth-screen.html
+++ b/src/html/home/sixth-screen.html
@@ -7,7 +7,7 @@
             <p class="sixth-screen-tagline">
                 Требуются специалисты:
             </p>
-            <div class="sixth-screen-container">
+            <div class="sixth-screen-container container">
                 <div class="sixth-screen-container-box">
                     <p class="sixth-screen-container-box-position">Инженер-программист</p>
                     <div class="sixth-screen-container-box-point">
@@ -72,13 +72,13 @@
                     </div>
                     <button class="sixth-screen-container-box-btn">Интересно!</button>
                 </div>
-                <div class="sixth-screen-container-arrows">
-                    <div class="sixth-screen-container-arrow">
-                        <img src="../img/home/arrow_left.svg" alt="arrow" />
-                    </div>
-                    <div class="sixth-screen-container-arrow">
-                        <img src="../img/home/arrow_right.svg" alt="arrow" />
-                    </div>
+            </div>
+            <div class="sixth-screen-container-arrows">
+                <div class="sixth-screen-container-arrow">
+                    <img src="../img/home/arrow_left.svg" alt="arrow" />
+                </div>
+                <div class="sixth-screen-container-arrow">
+                    <img src="../img/home/arrow_right.svg" alt="arrow" />
                 </div>
             </div>
             <p class="sixth-screen-lowStat">А если тебе еще не хватает знаний, приходи к нам на обучение. Мы поможем освоить азы профессии программиста.</p>
