Made some mixins in file vars.scss  and write this on styles

--- a/src/support.html
+++ b/src/support.html
@@ -27,10 +27,10 @@
         <div class="support-gallery">
             <p class="support-gallery-header">Мы работаем с сайтами на базе:</p>
             <div class="support-gallery-block">
-                <img class="support-gallery-item" src="../img/development/bitrix.png" alt="bitrix"/>
-                <img class="support-gallery-item" src="../img/development/laravel-logo 1.png" alt="laravel"/>
-                <img class="support-gallery-item" src="../img/development/Modx-logo 1.png" alt="Modx"/>
-                <img class="support-gallery-item" src="../img/development/wordpress-logo 1.png" alt="wordpress"/>
+                <img class="support-gallery-item" src="img/development/bitrix.png" alt="bitrix"/>
+                <img class="support-gallery-item" src="img/development/laravel-logo%201.png" alt="laravel"/>
+                <img class="support-gallery-item" src="img/development/Modx-logo%201.png" alt="Modx"/>
+                <img class="support-gallery-item" src="img/development/wordpress-logo%201.png" alt="wordpress"/>
             </div>
         </div>
 
@@ -39,7 +39,7 @@
                 <p class="support-care-title">Мы позаботимся о вашей системе!</p>
                 <p class="support-care-text">Вам не придется решать вопросы производительности, обновления и изменения в связи с расширением - все это будет делать наш специалист.</p>
                 <button class="support-care-btn">Заказать</button>
-                <img class="support-care-img" src="../img/support/girl-laptop.png" alt="girl-laptop"/>
+                <img class="support-care-img" src="img/support/girl-laptop.png" alt="girl-laptop"/>
             </div>
         </div>
 
