support. added styles for this page

--- a/src/html/all-pages/dropdown.html
+++ b/src/html/all-pages/dropdown.html
@@ -18,7 +18,7 @@
             <a href="/1C-integration.html">
                 <li class="dropdown-submenu-item">Интеграция с 1С</li>
             </a>
-            <a href="">
+            <a href="/support.html">
                 <li class="dropdown-submenu-item">Поддержка сайтов</li>
             </a>
 
