Crm-implement. Added some styles in this page

--- a/src/development.html
+++ b/src/development.html
@@ -150,8 +150,10 @@
           <div class="development-offer-container container">
               <p class="development-offer-title-1">В зависимости от бизнес-задач будущего ресурса,</p>
               <p class="development-offer-title-2">мы готовы предложить</p>
-              <img class="offer-main-hands" src="img/development/Frame-178.png" alt="hands"/>
-              <img class="offer-main-jacket" src="img/development/jaccket.png" alt="jacket"/>
+              <div class="development-offer-img">
+                  <img class="offer-main-hands" src="img/development/Frame-178.png" alt="hands"/>
+                  <img class="offer-main-jacket" src="img/development/jaccket.png" alt="jacket"/>
+              </div>
 <!--              <div class="development-offer-btns">-->
 <!--                  <div class="offer-main-item">Готовые сайты</div>-->
 <!--                  <div class="offer-main-item">Индивидуальные решения</div>-->
