--- a/src/html/all-pages/dropdown.html
+++ b/src/html/all-pages/dropdown.html
@@ -27,7 +27,7 @@
 
         <ul class="dropdown-submenu">
             <p class="dropdown-submenu-title">Внедрение CRM</p>
-            <a href="">
+            <a href="/crm-implement.html">
                 <li class="dropdown-submenu-item">Битрикс24.CRM</li>
             </a>
             <a href="">
