crm-implement: added all styles in this page

--- a/src/crm-implement.html
+++ b/src/crm-implement.html
@@ -86,56 +86,82 @@
         </div>
 
         <div class="crm-implement-content">
-            <p class="content-header">Пришло время оптимизации бизнеса!</p>
-            <div class="page-list-block">
-                <p class="page-list-blueTitle">Почему Битрикс24?</p>
-                <div class="page-list-list">
-                    <div class="page-list-item">
-                        <svg class="svg-resize-horizontal-round" width="24" height="24">
-                            <use href="#resize-horizontal-round"/>
-                        </svg>
-                        <span class="page-list-text">Большой спектр возможностей для работы с клиентом и не только. Корпоративный портал, можно наладить работу разных отделов.</span>
+            <div class="crm-implement-content-blur">
+                <div class="crm-implement-content-cont container">
+                    <div class="crm-implement-content-block">
+                        <p class="content-header">Пришло время оптимизации бизнеса!</p>
+                        <div class="page-list-block">
+                            <p class="page-list-blueTitle">Почему Битрикс24?</p>
+                            <div class="page-list-list">
+                                <div class="page-list-item">
+                                    <svg class="svg-resize-horizontal-round" width="24" height="24">
+                                        <use href="#resize-horizontal-round"/>
+                                    </svg>
+                                    <span class="page-list-text">Большой спектр возможностей для работы с клиентом и не только. Корпоративный портал, можно наладить работу разных отделов.</span>
+                                </div>
+                                <div class="page-list-item">
+                                    <svg class="svg-resize-horizontal-round" width="24" height="24">
+                                        <use href="#resize-horizontal-round"/>
+                                    </svg>
+                                    <span class="page-list-text">Возможность автоматизации и оптимизации бизнес-процессов</span>
+                                </div>
+                                <div class="page-list-item">
+                                    <svg class="svg-resize-horizontal-round" width="24" height="24">
+                                        <use href="#resize-horizontal-round"/>
+                                    </svg>
+                                    <span class="page-list-text">Интеграция большого количества сервисов и ПО, в том числе и с 1С</span>
+                                </div>
+                                <div class="page-list-item">
+                                    <svg class="svg-resize-horizontal-round" width="24" height="24">
+                                        <use href="#resize-horizontal-round"/>
+                                    </svg>
+                                    <span class="page-list-text">Удобный функционал</span>
+                                </div>
+                                <div class="page-list-item">
+                                    <svg class="svg-resize-horizontal-round" width="24" height="24">
+                                        <use href="#resize-horizontal-round"/>
+                                    </svg>
+                                    <span class="page-list-text">Контроль и отслеживание корректной работы сайта и хостинг-сервера</span>
+                                </div>
+                                <div class="page-list-item">
+                                    <svg class="svg-resize-horizontal-round" width="24" height="24">
+                                        <use href="#resize-horizontal-round"/>
+                                    </svg>
+                                    <span class="page-list-text">Очень гибкий функционал, который хорошо дорабатывается под потребности компании</span>
+                                </div>
+                            </div>
+                        </div>
                     </div>
-                    <div class="page-list-item">
+                    <img class="content-img" src="img/crm/office-man.png" alt="office-man"/>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="crm-implement-rates">
+            <img class="crm-implement-rates-img" src="img/crm/bitrix-box.png" alt="bitrix"/>
+            <div class="crm-implement-rates-cont container">
+                <div class="crm-implement-rates-block">
+                    <p class="rates-header">Мы осуществляем 2 направления внедрения Битрикс24:</p>
+                    <div class="rates-item">
                         <svg class="svg-resize-horizontal-round" width="24" height="24">
                             <use href="#resize-horizontal-round"/>
                         </svg>
-                        <span class="page-list-text">Возможность автоматизации и оптимизации бизнес-процессов</span>
+                        <p class="rates-title">Базовое внедрение Битрикс24</p>
+                        <p class="rates-text">(стандартный функционал внедрения)</p>
                     </div>
-                    <div class="page-list-item">
+                    <div class="rates-item">
                         <svg class="svg-resize-horizontal-round" width="24" height="24">
                             <use href="#resize-horizontal-round"/>
                         </svg>
-                        <span class="page-list-text">Интеграция большого количества сервисов и ПО, в том числе и с 1С</span>
-                    </div>
-                    <div class="page-list-item">
-                        <svg class="svg-resize-horizontal-round" width="24" height="24">
-                            <use href="#resize-horizontal-round"/>
-                        </svg>
-                        <span class="page-list-text">Удобный функционал</span>
-                    </div>
-                    <div class="page-list-item">
-                        <svg class="svg-resize-horizontal-round" width="24" height="24">
-                            <use href="#resize-horizontal-round"/>
-                        </svg>
-                        <span class="page-list-text">Контроль и отслеживание корректной работы сайта и хостинг-сервера</span>
-                    </div>
-                    <div class="page-list-item">
-                        <svg class="svg-resize-horizontal-round" width="24" height="24">
-                            <use href="#resize-horizontal-round"/>
-                        </svg>
-                        <span class="page-list-text">Очень гибкий функционал, который хорошо дорабатывается под потребности компании</span>
+                        <p class="rates-title">Пакетное внедрение Битрикс24</p>
+                        <p class="rates-text">(индивидуальная разработка)</p>
                     </div>
                 </div>
             </div>
-            <img class="content-img" src="img/crm/office-man.png" alt="office-man"/>
         </div>
 
-        <div>
-            <img class="crm-implement-img" src="img/crm/Frame%20209.png" alt="bitrix"/>
-        </div>
-
-        <div class="page-list-block">
+        <div class="page-list-block page-list-bonuses container">
             <p class="page-list-title">Бонусы</p>
             <div class="page-list-item">
                 <svg class="svg-resize-horizontal-round" width="24" height="24">
