Contacts: Added styles in this page and added contacns.html in href in header.html

--- a/src/html/all-pages/header.html
+++ b/src/html/all-pages/header.html
@@ -9,7 +9,9 @@
       <li class="header-menu-item">Кейсы</li>
       <li class="header-menu-item">О нас</li>
       <li class="header-menu-item">Блог</li>
-      <li class="header-menu-item">Контакты</li>
+      <a href="/contacts.html">
+        <li class="header-menu-item">Контакты</li>
+      </a>
     </ul>
     <a class="header-phone" href="tel:+79803752254">
       <img class="header-phone-icon" src="@img/icons/icons.svg#shape" alt="phone" />
